--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script src="https://code.createjs.com/createjs-2015.11.26.min.js"></script>
+    <script src="./preloadjs-0.3.0.min.js"></script>
     <script src="./index.js"></script>
 </head>
 <body>
